--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ SLACK_BOT_TOKEN=xoxb-your-bot-token-here
 # Required only if you want to use the search_messages functionality
 # SLACK_USER_TOKEN=xoxp-your-user-token-here
 
+# Optional: Use user token for read operations instead of bot token
+# Set to true to enable search APIs and broader workspace access
+# Default: false (bot token only for better security)
+# USE_USER_TOKEN_FOR_READ=false
+
 # MCP Configuration  
 MCP_SERVER_NAME=slack-mcp-server
 MCP_SERVER_VERSION=1.0.0
