--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "prepare": "npm run build",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
@@ -25,11 +26,19 @@
   ],
   "author": "Your Name",
   "license": "MIT",
+  "files": [
+    "dist/**/*",
+    "src/**/*",
+    "package.json",
+    "README.md",
+    ".env.example"
+  ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@slack/web-api": "^7.0.0",
     "dotenv": "^16.4.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -43,8 +52,7 @@
     "prettier": "^3.2.0",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.0"
+    "tsx": "^4.7.0"
   },
   "engines": {
     "node": ">=18.0.0"
